# x-cam

./: README.md
comparisons/: download_superglue.sh  run_m3cam2-0.py  run_m3cam2-0.sh  test_localfeaturematcher.py
comparisons/libs/: localfeaturematcher.py  rootsift.py  superglue_matcher.py  utilities.py
eval/: convert_res2tex.py  generateGT.py  process_results.py  run_convert_res.sh  run_process_results.sh
scripts/: extract_all_res.sh  move_all_res_rs_sp_sg.sh  remove_all_images.sh  remove_all_res.sh
src/: CMakeLists.txt  build.sh  clean.sh
src/Vocabulary/: .gitignore
src/demo/: demo.sh  test_sync_12.sh  test_sync_5.sh
src/include/: DLoopDetector.h  Frame.h  GlobalFeatDB.h  TemplatedLoopDetector.h  agent.h  messages.h  params.h  timer.h  utilities.h
src/scripts/: run_all_seq_pairs.sh  run_all_single_seqs.sh  run_single_mode.sh  run_single_mode_LCD.sh  run_sync_mode.sh
src/src/: GlobalFeatDB.cpp  agent.cpp  frame.cpp  main.cpp  unit_tests.cpp  utilities.cpp
src/tests/: run_all_tests.cpp  test.cpp  tests.h
viz/: agent_queryresults_test.txt  make_video.py  plot_feature_matches.py  plot_scores_view_features.py  run_make_video.sh  run_make_video_ffmpeg.sh  run_plot_matches.sh
